verification_output_v4.txt
/Users/ikymasie/Documents/GitHub/KIKA/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
scripts/verify-registrar-workflow.ts(68,52): error TS2339: Property 'getOfficialRegistry' does not exist on type 'typeof RegistrationService'.
scripts/verify-registrar-workflow.ts(69,37): error TS7006: Parameter 's' implicitly has an 'any' type.

    at createTSError (/Users/ikymasie/Documents/GitHub/KIKA/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/Users/ikymasie/Documents/GitHub/KIKA/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/Users/ikymasie/Documents/GitHub/KIKA/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/Users/ikymasie/Documents/GitHub/KIKA/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/Users/ikymasie/Documents/GitHub/KIKA/node_modules/ts-node/src/index.ts:1617:30)
    at loadTS (node:internal/modules/cjs/loader:1826:10)
    at Object.require.extensions.<computed> [as .ts] (/Users/ikymasie/Documents/GitHub/KIKA/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1469:32)
    at Module._load (node:internal/modules/cjs/loader:1286:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2339, 7006 ]
}
